# commands-parser-with-linked-list

./: CMakeLists.txt  GRADE.md  README.md  complexObject.cpp  complexObject.h  doubleObject.cpp  doubleObject.h  intObject.cpp  intObject.h  main.cpp  object.h  objectlist.cpp  objectlist.h  stringObject.cpp  stringObject.h
logs/: 3b_textResult_unitTests.json  3c_textResult_systemTests.json  3d_textResult.xml
system_tests/: CMakeLists.txt  executableTests.cpp  runningexternalprogram.cpp  runningexternalprogram.h
system_tests/libs/tiny-process-library/: CMakeLists.txt
unit_tests/: CMakeLists.txt  objectUniqueListTest.cpp
